[metadata]
name = pisat
version = attr: pisat.__version__
url = https://github.com/jjj999/pisat/
author = Yunhyeon Jeong
author_email = jjj999to@gmail.com
description = Python Robot and IoT framework with state-management.
long-description = file: README.md 
licence = MIT

[options]
python_requires = >= 3.7
packages = find:
